--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -26,8 +26,21 @@
             <section>
 
             <section>
-                <strong>Form Results:</strong>
+                <strong>Socre_tag:</strong>
                 <div id="results"></div>
+                <div>============================================================</div>
+                <strong>Agreement:</strong>
+                <div id="agreement"></div>
+                <div>============================================================</div>
+                <strong>Irony:</strong>
+                <div id="irony"></div>
+                <div>============================================================</div>
+                <strong>Subjectivity:</strong>
+                <div id="subjectivity"></div>
+                <div>============================================================</div>
+                <strong>Confidence:</strong>
+                <div id="confidence"></div>
+               
             </section>
         </main>
 
